--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/core": "^6.4.17",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "expo": "^52.0.7",
+    "expo-asset": "^11.0.1",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "^3.1.0",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -35,9 +38,11 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10"
   },
