--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-clipboard/clipboard": "^1.16.1",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/core": "^6.4.17",
     "@react-navigation/drawer": "^6.7.2",
@@ -26,6 +27,7 @@
     "@react-navigation/stack": "^7.1.1",
     "expo": "^52.0.33",
     "expo-asset": "^11.0.3",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "^17.0.5",
     "expo-font": "^13.0.3",
     "expo-linear-gradient": "^14.0.2",
@@ -47,9 +49,9 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "expo-clipboard": "~7.0.1"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
