--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.16.1",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-masked-view/masked-view": "^0.3.2",
@@ -26,10 +26,10 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "^52.0.33",
-    "expo-asset": "^11.0.3",
+    "expo-asset": "~11.0.5",
     "expo-clipboard": "~7.0.1",
-    "expo-constants": "^17.0.5",
-    "expo-font": "^13.0.3",
+    "expo-constants": "~17.0.8",
+    "expo-font": "~13.0.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "^4.0.17",
