--- a/package.json
+++ b/package.json
@@ -15,42 +15,41 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.16.1",
-    "@react-native-community/slider": "^4.5.5",
+    "@react-native-community/slider": "4.5.5",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/core": "^6.4.17",
-    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
-    "expo": "^52.0.33",
+    "@react-navigation/stack": "^7.3.1",
+    "expo": "~52.0.46",
     "expo-asset": "~11.0.5",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "^7.0.5",
-    "expo-router": "^4.0.17",
-    "expo-splash-screen": "^0.29.21",
-    "expo-status-bar": "^2.0.1",
-    "expo-system-ui": "^4.0.8",
-    "expo-web-browser": "^14.0.2",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
+    "expo-web-browser": "~14.0.2",
     "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.7",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^4.4.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-text-gradient": "^0.1.7",
-    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
@@ -61,9 +60,9 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "~29.7.0",
-    "jest-expo": "^52.0.3",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "private": true
 }
