--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
